njayasee-nautilus-desktop-gui/desktop.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: njayasee-desktop # Change this to your njayasee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: njayasee-desktop # Change this to your njayasee
  template:
    metadata:
      labels:
        app: njayasee-desktop # Change this to your njayasee
    spec:
      hostname: njayasee-desktop # Change this to your njayasee
      containers:
      - name: njayasee-desktop # Change this to your njayasee
        image: ghcr.io/selkies-project/nvidia-glx-desktop:22.04-20240815104538
 
        stdin: true
        tty: true
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 32Gi
            cpu: "16"
            nvidia.com/gpu: 1
            ephemeral-storage: 35Gi
          requests:
            memory: 8Gi
            cpu: "4"
            ephemeral-storage: 35Gi
        volumeMounts:
        - mountPath: /dev/shm
          name: dshm
        - mountPath: /cache
          name: cache-vol
        - mountPath: /home/ubuntu/persistent
          name: root-vol
        - mountPath: /crash-team
          name: crash-team-vol
        - name: e2e
          mountPath: /data
        - name: pytorch-e2e
          mountPath: /data/pytorch-e2e
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 8.8.8.8
        - 8.8.4.4
      volumes:
      - name: dshm
        emptyDir: {}
      - name: cache-vol
        persistentVolumeClaim:
          claimName: njayasee-carla-cache # Change this to your njayasee
      - name: root-vol
        persistentVolumeClaim:
          claimName: njayasee-carla # Change this to your njayasee
      - name: crash-team-vol
        persistentVolumeClaim:
          claimName: crash-team-work
      - name: e2e
        persistentVolumeClaim:
          claimName: waymo-e2e-dataset
      - name: pytorch-e2e
        persistentVolumeClaim:
          claimName: waymo-e2e-dataset-conv  

      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: NotIn
                values:
                - ucsd-suncave
