njayasee-nautilus-desktop-gui/desktop-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: haproxy
  name: njayasee-desktop # Change this to your njayasee
spec:
  ingressClassName: haproxy
  rules:
  - host: njayasee.nrp-nautilus.io # Change this to your njayasee
    http:
      paths:
      - backend:
          service:
            name: njayasee-desktop # Change this to your njayasee
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - njayasee.nrp-nautilus.io # Change this to your njayasee
---
apiVersion: v1
kind: Service
metadata:
  name: njayasee-desktop # Change this to your njayasee
  labels:
    app: njayasee-desktop # Change this to your njayasee
spec:
  selector:
    app: njayasee-desktop # Change this to your njayasee
  ports:
  - name: http
    protocol: TCP
    port: 8080
